@@ -1,3 +1,11 @@
+2006/01/22	kaffeetisch
+
+	Merge from HEAD:
+
+	* AUTHORS, Makefile.PL: Apply a patch from Wim Lewis that makes
+	sure we don't use threading stuff if perl isn't configured to
+	handle threads.
+
 2006/01/18	kaffeetisch
 
 	* Glib.pm, NEWS, README: Stable release 1.103.
